[gd_scene load_steps=4 format=3 uid="uid://o1kniy46vrqb"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_k4sa4"]
[ext_resource type="PackedScene" uid="uid://ca3lkrp7q8nnj" path="res://options.tscn" id="2_dm0j0"]
[ext_resource type="FontFile" uid="uid://nn6s6pjj8gr1" path="res://art/KingBird-VG1JB.otf" id="3_2ot7w"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k4sa4")

[node name="Options" parent="." instance=ExtResource("2_dm0j0")]
visible = false

[node name="ColorRect2" type="ColorRect" parent="Options"]
z_index = -128
z_as_relative = false
offset_right = 3000.0
offset_bottom = 3000.0
mouse_filter = 2
color = Color(0.360784, 0.360784, 0.360784, 0.423529)

[node name="PauseMenu" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
offset_right = 3000.0
offset_bottom = 3000.0
mouse_filter = 2
color = Color(0.360784, 0.360784, 0.360784, 0.423529)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -78.0
offset_right = 84.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2ot7w")
text = "Resume"

[node name="OptionsButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2ot7w")
text = "Options"

[node name="MenuButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2ot7w")
text = "Quit to Menu"

[node name="QuitButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2ot7w")
text = "Quit to Desktop"

[connection signal="pressed" from="PauseMenu/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
